# emissary-router

./: .env.example  .gitignore  README.md  config.example.json  config.example.yaml  install.sh  pricing.example.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: commands.md  configuration.md  dashboard.md  demo.md  pricing.md  providers-caching.md  telemetry.md  thinking.md  troubleshooting.md
scripts/: integration_test.sh  test_env.sh.example
src/emissary_router/: catalog.py  cli.py  config.py  defaults.py  demo_search.py  demo_stream.py  launch.py  pipeline.py  schemas.py  server.py
src/emissary_router/caching/: __init__.py  ledger.py  state.py
src/emissary_router/dashboard/: __init__.py  demo.py  page.py  routes.py  savings.py
src/emissary_router/providers/: __init__.py  anthropic.py  base.py  google.py  openrouter.py  registry.py  thinking.py  zai.py
src/emissary_router/routing/: __init__.py  cache_cost.py  classifier.py  classifier_input.py  policy.py  request_to_classifier_input.py
src/emissary_router/telemetry/: __init__.py  event_record.py  log.py  sqlite_store.py  turn_tracker.py
src/router/: cli.py  config.py  ir.py  launch.py  pipeline.py  server.py
src/router/caching/: __init__.py  state.py  usage.py
src/router/providers/: __init__.py  anthropic.py  base.py  google.py  openrouter.py  registry.py  thinking.py
src/router/routing/: __init__.py  classifier.py  policy.py  request_to_classifier_input.py  request_view.py  view.py
tests/: test_anthropic_provider.py  test_cache_ledger.py  test_classifier_input_contract.py  test_config.py  test_context_guard.py  test_dashboard_auth.py  test_dashboard_config.py  test_dashboard_savings.py  test_demo.py  test_error_surfacing.py  test_gateway_lifecycle.py  test_google_provider.py  test_init.py  test_openrouter_provider.py  test_policy.py  test_request_classifier_input.py  test_router_view_contract.py  test_server_auth.py  test_server_reload.py  test_telemetry_log.py  test_telemetry_store.py  test_zai_provider.py
(+1 files in other folders)
