[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "emissary-router"
version = "0.0.1"
description = "Pure-Python Claude Code routing gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emissary", email = "support@withemissary.com" }]
keywords = ["claudecode", "agent-gateway", "llm", "router", "gateway", "proxy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/Emissary-Tech/emissary-router"
Repository = "https://github.com/Emissary-Tech/emissary-router"
Issues = "https://github.com/Emissary-Tech/emissary-router/issues"

[project.scripts]
"er" = "emissary_router.cli:main"
"emissary-router" = "emissary_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/emissary_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
